<resources>
    <string name="app_name">FirebaseExample</string>
    <string name="button_rd">RealTime Database</string>
    <string name="button_cf">Cloud Firestore</string>
    <string name="button_cs">Cloud Storage</string>
    <string name="button_fa">Firebase Authentication</string>
    <string name="button_func">Cloud Functions</string>

    <string name="button_like">Gostei</string>
    <string name="button_not_like">Não Gostei</string>

    <string name="nome_item">Nome</string>
    <string name="idade_item">%d anos.</string>
    <string name="curtidas_item">%d curtidas</string>

    <string name="nome_campo">Nome: </string>
    <string name="idade_campo">Idade: </string>
    <string name="button_cad">Cadastrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
