<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/realTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_rd"
                android:onClick="@{(view) -> listener.onClick(view)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/fireStoreID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/realTimeID" />

            <Button
                android:id="@+id/storageID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fireStoreID" />

            <Button
                android:id="@+id/authID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_fa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storageID" />

            <Button
                android:id="@+id/functionsID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_func"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authID"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>